# motion-search

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  how_to_write_optimization.txt  motion_search.pc.in
cmake/: ClangFormat.cmake
docs/: optimization-guide.md
motion_search/: AVIReader.cpp  AVIReader.h  AVSFileReader.cpp  AVSFileReader.h  BaseVideoSequenceReader.cpp  BaseVideoSequenceReader.h  ComplexityAnalyzer.cpp  ComplexityAnalyzer.h  EOFException.cpp  EOFException.h  IVideoSequenceReader.h  MotionVectorField.cpp  MotionVectorField.h  Y4MSequenceReader.cpp  Y4MSequenceReader.h  YUVFrame.cpp  YUVFrame.h  YUVSequenceReader.cpp  YUVSequenceReader.h  combine.bat  common.h  cpu.c  cpu.h  cpu_disp.h  fb_command_line_parser.h  frame.c  frame.h  intrinsic.h  main.cpp  memory.cpp  memory.h  memory_tools.cpp  memory_tools.h  moments.c  moments.disp.cpp  moments.h  motion_search.c  motion_search.h  xplatform.h
motion_search/asm/: moments.x86.sse2.c
motion_search/inc/: BaseVideoSequenceReader.h  IVideoSequenceReader.h  Y4MSequenceReader.h  YUVSequenceReader.h  common.h  cpu.h  cpu_disp.h  fb_command_line_parser.h  frame.h  intrinsic.h  memory.h  moments.h  xplatform.h
motion_search/src/: BaseVideoSequenceReader.cpp  Y4MSequenceReader.cpp  YUVSequenceReader.cpp  cpu.c  frame.c  memory.cpp  moments.disp.cpp
